[package]
name = "http_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
anyhow = { version = "1.0", default-features = false }
