[package]
name = "reverb"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
futures = "0.3"
anyhow = { version = "1.0", default-features = false }
mime_guess = "2"
